<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Festival für unangepasste Kunst</string>

   <string name="action_events">Events</string>
   <string name="action_anfahrt">Anfahrt</string>
   <string name="action_festival">Festival</string>
   <string name="action_gruender">Gründer</string>
   <string name="action_impressum">Impressum</string>

   <string name="name_festival_1">Demokratie</string>
   <string name="name_festival_2">Macht</string>
   <string name="name_festival_3">Partizipation</string>
   <string name="date_festival_1">Mai 6 – 8</string>
   <string name="date_festival_2">Juli 15 – 17</string>
   <string name="date_festival_3">Oktober 7 – 9</string>
   <string name="location_festival_1">Galerie LUXESE</string>
   <string name="location_festival_2">Nymphenburger Schloss/\nBotanischer Garten</string>
   <string name="location_festival_3">Haus MUCCA</string>
   <string name="subtitle_festival_1">„Wählen oder nicht wählen?\nDas ist hier die Frage“</string>
   <string name="subtitle_festival_2">„Uns gehört die Stadt!\nWer ist das Volk?“</string>
   <string name="subtitle_festival_3">„Wer ist drin\nund wer bleibt draußen?“</string>

   <string name="map_marker_festival_1_title">Demokratie, Mai 6–8</string>
   <string name="map_marker_festival_2_title">Macht, Juli 15–17</string>
   <string name="map_marker_festival_3_title">Partizipation, Oktober 7–9</string>

   <string name="map_marker_festival_1_desc">Galerie LUXESE\nBurggrafenstr. 5\nMünchen</string>
   <string name="map_marker_festival_2_desc">Unterführung Nymphenburger Schloss/Botanischer Garten\nMünchen</string>
   <string name="map_marker_festival_3_desc">Haus MUCCA\nSchwere-Reiter-Straße 2\nMünchen</string>


   <string name="tab_kunstwerke">Werke</string>
   <string name="tab_kuenstler">Künstler</string>


   <string name="notification_festival_information">Diese App begleitet das zweite Festival der unangepassten Kunst. Hier finden Sie Informationen zu Künstlern und deren Werken.</string>
   <string name="notification_button_ok">Ok</string>
   <string name="notification_button_more">Mehr erfahren</string>
   <string name="title_activity_werk_detail">Kunstwerk</string>
   <string name="title_activity_impressum">Impressum</string>
   <string name="title_activity_event_infos">Event Informationen</string>
   <string name="title_activity_anfahrt">Anfahrt</string>
   <string name="action_settings">Settings</string>
   <string name="festival_info_text">IN ART WE TRUST\n\nDas KuratorenTeam ADLER  A.F. und Jessica Petraccaro-Goertsches aka JPG stellen unangepasste, nicht ästhetisch etablierte und unkonventionelle Malerei, Skulptur, Fotografie, Videokunst, Performance und Musik vor.\n\n„Kunst kann nicht nur dekorieren, sondern die Welt verändern“ meint ADLER  A.F., die Initiatorin des Festivals und knüpft damit „….in Zeiten wie diesen – keine guten Zeiten für Angsthasen!“ an das 1. Münchner Festival für unangepasste Kunst an, das ADLER  A.F. und ihr Team 2014 mutigen, unkonventionellen Künstlerinnen wie Meret Oppenheim, Louise Bourgeois, Louise Nevelson und Hannah Höch gewidmet hatten.\n\nAuch beim 2. Münchner Festival für unangepasste Kunst entsteht eine Plattform im öffentlichen Raum für KünstlerInnen der lokalen, nationalen und internationalen Szene, die sich der unangepassten Kunst verschrieben haben und über eine profunde Ausbildung verfügen. An drei völlig unterschiedlichen Münchner Orten sind Art Happenings geplant, die sich mit hochbrisanten gesellschaftspolitischen Themen wie Demokratie, Macht und Partizipation beschäftigen und durch die Wahl der Räume Zeichen setzen wollen.\n\nBespielt werden eine offspace Galerie in Berg am Laim, eine riesigen Fußgänger Unterführung in der Nähe zum Schloß Nymphenburg und die XXXL-Halle MUCCA im KreativQuartier direkt gegenüber einer Flüchtlingsunterkunft. Das Kuratorenteam JPG aka Jessica Petraccaro-Goertsches/Kunsthistorikerin und TrashArt Künstlerin ADLER  A.F., das enfant terrible der Münchner Kunstszene, präsentieren polit- und gesellschaftskritische Kreativität in all ihren Facetten, Genre – und Generationen-übergreifend in ihrer kulturellen Vielfalt: Video – und Objektkunst, Malerei, Collagen, Assemblagen, Performances, Installation, Improvisationstheater, installative Lesungen und prosaische Delikatessen aus dem Buch einer Literatin aus Dresden, GangstaRap, musikalische Experimente, Spontan-Interventionen und kabarettistische Wortspieler.\n\nGezeigt wird, was unkonventionell, auf keinen Fall schönmalerisch oder gefällig ist, Arbeiten aus wiederverwertbaren, ungewöhnlichen Materialien, Schrilles, Hässliches, alles, was die Sehgewohnheiten auf den Kopf stellt, schräg und außergewöhnlich, Kunst aus Müll, DADA-Literatur und FLUXUS-Theater.\n\nProvozieren und aufrütteln wollen die beteiligten KünstlerInnen und gleichzeitig Haltung zeigen, Widerstand gegen nationalistische Strömungen, die respektlos humanitäre Werte verhöhnen. Ernst und doch humorig äußert sich ADLER  A.F. „Als werte-orientierte Humanistin und Demokratin bin ich überzeugt davon, dass, wer in der Demokratie schläft, in der Diktatur aufwacht. Deshalb: Leute geht wählen! AfD&amp;co geht gar nicht! Heute sind es die Flüchtlinge, deren Häuser brennen, morgen die Häuser der Moslems, Juden oder KünstlerInnen und übermorgen …? Wer ist eigentlich das Volk? Wem gehört die Stadt?“ Antworten auf diese Fragen wollen die Kunstwerke und das politische Engagement der Beteiligten des 2. Münchner Festivals für unangepasste Kunst aufzeigen. Denn wenn grenzenloses kreatives Agieren ermöglicht wird, kommen bestenfalls Anregungen und Denkanstöße für die BesucherInnen der Art Happenings heraus, wie etwa die Einsicht: Für Freiheit und Demokratie braucht es halt genug Demokraten!</string>


   <string name="imageview_description">Image Thumbnail</string>
   <string name="no_network_connection_toast">No network connection found</string>
   <string name="image_detail_kuenstler_title">Künstler</string>

   <string name="festival_info_gruender_title">Gründer</string>
   <string name="festival_info_beschreibung_title">Beschreibung</string>
   <string name="festival_info_termine_title">Termine</string>
   <string name="festival_desc_demokratie">6. bis 8. Mai 2016\nin der Galerie LUXESE zwischen Luxus und Askese in Berg am Laim, Burggrafenstr. 5 direkt hinterm Ostbahnhof\n\nVernissage: Freitag, 6. Mai 20 Uhr\n\nAusstellung: Sa. u. So. 15 bis 18 Uhr\n\nEintritt: 5€</string>
   <string name="festival_desc_macht">15. bis 17. Juli 2016\nOpen Air in der Unterführung Nymphenburger Schloss/Botanischer Garten\n\nVernissage: Freitag, 15. Juli, 18 Uhr\n\nAusstellung: Sa. u. So. 15 bis 18 Uhr\n\nEintritt: 5€</string>
   <string name="festival_desc_partizipation">7. bis 9. Oktober 2016\nim Haus MUCCA, Münchner Kreativquartier, Schwere-Reiter-Straße 2\n\nVernissage: Freitag, 07. Oktober, 18 Uhr mit Katalog und DVD-Vorstellung\n\nAusstellung: Fr. 20 Uhr, Sa. u. So. 15 bis 18 Uhr\n\nEintritt: 5€</string>

   <string name="empty_kuenstler">Für diesen Künstler gibt es leider noch keine Inhalte.</string>
</resources>
