<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:id="@+id/select_festival_container"
   android:weightSum="3"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   tools:context=".WeekendSelectActivity"
   android:orientation="vertical">

    <android.support.v7.widget.CardView
       android:id="@+id/demokratie_container"
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:cardElevation="4dp"
       android:layout_marginTop="@dimen/activity_vertical_margin"
       android:layout_marginBottom="@dimen/activity_vertical_margin">
        <ImageSwitcher
           android:id="@+id/demokratie_images"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:scaleType="centerCrop">

        </ImageSwitcher>
        <View
           android:id="@+id/demokratie_view"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:clickable="true"
           android:background="@drawable/selector_festival_demokratie" />
        <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="@dimen/activity_horizontal_margin"
           android:textAppearance="@style/Festival.Text.RobotoLight"
           android:textColor="@color/text_primary"
           android:text="@string/name_festival_1"
           android:textSize="@dimen/text_size_festival_name"/>
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|right"
           android:padding="@dimen/activity_horizontal_margin"
           android:textAppearance="@style/Festival.Text.RobotoLight"
           android:textColor="@color/text_primary"
           android:text="@string/date_festival_1"
           android:textSize="@dimen/text_size_festival_date"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
       android:id="@+id/macht_container"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:layout_marginBottom="@dimen/activity_vertical_margin"
       app:cardElevation="4dp">
        <ImageSwitcher
           android:id="@+id/macht_images"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:scaleType="centerCrop">

        </ImageSwitcher>
        <View
           android:id="@+id/macht_view"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:clickable="true"
           android:background="@drawable/selector_festival_macht" />
        <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="@dimen/activity_horizontal_margin"
           android:textAppearance="@style/Festival.Text.RobotoLight"
           android:textColor="@color/text_primary"
           android:text="@string/name_festival_2"
           android:textSize="@dimen/text_size_festival_name"/>
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|right"
           android:padding="@dimen/activity_horizontal_margin"
           android:textAppearance="@style/Festival.Text.RobotoLight"
           android:textColor="@color/text_primary"
           android:text="@string/date_festival_2"
           android:textSize="@dimen/text_size_festival_date"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
       android:id="@+id/partizipation_container"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:layout_marginBottom="@dimen/activity_vertical_margin"
       app:cardElevation="4dp">
        <ImageSwitcher
           android:id="@+id/partizipation_images"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:scaleType="centerCrop">

        </ImageSwitcher>
        <View
           android:id="@+id/partizipation_view"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:clickable="true"
           android:background="@drawable/selector_festival_partizipation" />
        <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="@dimen/activity_horizontal_margin"
           android:textAppearance="@style/Festival.Text.RobotoLight"
           android:textColor="@color/text_primary"
           android:text="@string/name_festival_3"
           android:textSize="@dimen/text_size_festival_name"/>
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|right"
           android:padding="@dimen/activity_horizontal_margin"
           android:textAppearance="@style/Festival.Text.RobotoLight"
           android:textColor="@color/text_primary"
           android:text="@string/date_festival_3"
           android:textSize="@dimen/text_size_festival_date"/>
    </android.support.v7.widget.CardView>

</LinearLayout>
