<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical" >
   <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="centerCrop"
      android:src="@drawable/titel_partizipation"/>
   <TextView
      android:id="@+id/date"
      android:text="@string/date_festival_3"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_marginBottom="@dimen/padding_small"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/Festival.Text.RobotoLight"
      android:textSize="24sp"
      android:layout_alignParentEnd="true"
      android:textColor="@color/text_primary"/>
   <TextView
      android:id="@+id/location"
      android:layout_below="@id/date"
      android:text="@string/location_festival_3"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="@style/Festival.Text.RobotoLight"
      android:textSize="20sp"
      android:textAlignment="textEnd"
      android:gravity="end"
      android:layout_alignParentEnd="true"
      android:textColor="@color/text_secondary"/>
   <TextView
      android:id="@+id/subtitle"
      android:text="@string/subtitle_festival_3"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:paddingBottom="@dimen/padding_big"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:layout_centerInParent="true"
      android:gravity="center"
      android:textAppearance="@style/Festival.Text.RobotoLight"
      android:textSize="24sp"
      android:textColor="@color/text_primary"/>
   <ImageView
      android:src="@drawable/selector_select_festival"
      android:background="@color/transparent"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
</RelativeLayout>