<RelativeLayout
   android:id="@+id/main_layout"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".SelectFestivalActivity">

    <android.support.v7.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:background="@color/primary"
       android:elevation="6dp"
       app:titleTextColor="@color/text_primary"
       android:minHeight="?attr/actionBarSize"
       android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <android.support.v7.widget.CardView
       android:id="@+id/notification_container"
       android:layout_alignParentBottom="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardElevation="4dp"
       app:cardCornerRadius="0dp"
       android:visibility="gone">
        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="@dimen/activity_horizontal_margin"
           android:orientation="vertical">
            <TextView
               android:id="@+id/notification_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textAppearance="@style/Festival.Text.RobotoLight"
               android:textColor="@color/text_dark_primary"
               android:text="@string/notification_festival_information"/>
            <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom|right"
               android:orientation="horizontal">
                <Button
                   android:id="@+id/notification_button_ok"
                   style="@style/Festival.FlatButton"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/Festival.Text.RobotoLight"
                   android:text="@string/notification_button_ok"/>
                <Button
                   android:id="@+id/notification_button_more"
                   style="@style/Festival.ButtonRed"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/Festival.Text.RobotoLight"
                   android:text="@string/notification_button_more"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/viewpager_container"
       android:layout_below="@id/toolbar"
       android:layout_above="@id/notification_container">
        <android.support.v4.view.ViewPager
           android:id="@+id/festival_view_pager"
           android:layout_width="match_parent"
           android:layout_height="match_parent" />

        <RadioGroup
           android:layout_width="wrap_content"
           android:layout_height="30dp"
           android:layout_gravity="center_horizontal|bottom"
           android:orientation="horizontal"
           android:id="@+id/vp_indicators">
            <RadioButton
               style="@style/Festival.RadioButton"
               android:layout_gravity="center_vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:clickable="false"
               android:id="@+id/vp_indicator1"
               android:checked="true" />

            <RadioButton
               style="@style/Festival.RadioButton"
               android:layout_gravity="center_vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:clickable="false"
               android:id="@+id/vp_indicator2" />

            <RadioButton
               style="@style/Festival.RadioButton"
               android:layout_gravity="center_vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:clickable="false"
               android:id="@+id/vp_indicator3" />
        </RadioGroup>
    </FrameLayout>
    <View
       android:id="@+id/notification_shadow"
       android:layout_width="match_parent"
       android:layout_height="4dp"
       android:alpha="0.5"
       android:visibility="gone"
       android:background="@drawable/shadow_notification"
       android:layout_above="@id/notification_container"/>
</RelativeLayout>